# fleeets

./:  tsconfig.app.json  .gitignore  README.md  bun.lockb  components.json  index.html  package-lock.json  package.json  postcss.config.js  tailwind.config.js  tsconfig.json  tsconfig.node.json  vercel.json  vite.config.ts
.github/actions/setup/: action.yml
.github/workflows/: bump-version.yml  deploy-website.yml  release.yml
api/: telegram-webhook.ts  tts.ts
src/: App.vue  App1.vue  main.ts  supabase.ts
src-tauri/: Cargo.toml  keys.pub  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/api/: telemetry.ts
src/assets/: main.css
src/assets/css/: styles.css
src/components/: NoteItem.vue  TelegramLogin.vue
src/components/auth/: AuroraBackground.vue  LoginView.vue
src/components/layout/: AppFooter.vue  SettingsPanel.vue
src/components/notes/: NoteInput.vue  NoteList.vue
src/composables/: useAppSettings.ts  useAuth.ts  usePostHog.ts
src/pages/: InboxPage.vue
src/stores/: inbox.ts  notes.ts
src/utils/: tts.ts
supabase/: config.toml
supabase/functions/telegram-auth/: index.ts
supabase/functions/telegram-auth-poll/: index.ts
supabase/functions/telegram-webhook/: index.ts
website/: index.html  styles.css
website/icons/: site.webmanifest
website/js/: script.js  sentry.bundle.min.js
