# File: src-tauri/Cargo.toml
[package]
name = "fleets"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = [ "macos-private-api", "global-shortcut-all", "global-shortcut", "fs-all", "path-all", "window-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
